--- a/select_menu_btn/styles/select_menu_btn.less
+++ b/select_menu_btn/styles/select_menu_btn.less
@@ -46,5 +46,9 @@
     padding: 5px 10px;
     text-align: center;
     font-family: "Microsoft Yahei", Arial;
+    &.active {
+      background-color: #58a;
+      color: white;
+    }
   }
 }
